Update documentation and vignettes for gemini.R
Added news entries for gemini.R documentation and updated the hexsticker. Refreshed pkgdown build timestamp and updated search index. Revised vignettes for Google Search, image generation, and Vertex AI to reflect recent changes and improvements.

--- a/vignettes/articles/google-search.qmd
+++ b/vignettes/articles/google-search.qmd
@@ -7,7 +7,7 @@ format:
 
 ### Quick start
 
-You can sue gemini_search to get recent information from google.
+You can use gemini_search to get recent information from google.  
 
 - `gemini_searchR` has deprecated
 
