--- a/vignettes/gemini-R.qmd
+++ b/vignettes/gemini-R.qmd
@@ -3,6 +3,14 @@ title: "Get Started"
 format: 
     html:
         embed-resources: true
+vignette: >
+  %\VignetteIndexEntry{Get Started}
+  %\VignetteEngine{quarto::html}
+  %\VignetteEncoding{UTF-8}
+knitr:
+  opts_chunk: 
+    collapse: true
+    comment: '#>'
 ---
 
 ## Goal
