--- a/vignettes/google-search.qmd
+++ b/vignettes/google-search.qmd
@@ -3,6 +3,14 @@ title: "Use web search"
 format: 
     html:
         embed-resources: true
+vignette: >
+  %\VignetteIndexEntry{Use web search}
+  %\VignetteEngine{quarto::html}
+  %\VignetteEncoding{UTF-8}
+knitr:
+  opts_chunk: 
+    collapse: true
+    comment: '#>'
 ---
 
 ### Quick start
