--- a/vignettes/image_understanding.qmd
+++ b/vignettes/image_understanding.qmd
@@ -3,6 +3,14 @@ title: "Image Understanding"
 format: 
     html:
         embed-resources: true
+vignette: >
+  %\VignetteIndexEntry{Image Understanding}
+  %\VignetteEngine{quarto::html}
+  %\VignetteEncoding{UTF-8}
+knitr:
+  opts_chunk: 
+    collapse: true
+    comment: '#>'
 ---
 
 ### Quick start
