--- a/vignettes/rstudio-addin.qmd
+++ b/vignettes/rstudio-addin.qmd
@@ -3,6 +3,14 @@ title: "Use RStudio Addins"
 format: 
     html:
         embed-resources: true
+vignette: >
+  %\VignetteIndexEntry{Use RStudio Addins}
+  %\VignetteEngine{quarto::html}
+  %\VignetteEncoding{UTF-8}
+knitr:
+  opts_chunk: 
+    collapse: true
+    comment: '#>'
 ---
 
 ### Quick start
